# numerical-methods

./: .gitignore  Cargo.toml
numerical-methods/gaussian-elimination/: Cargo.toml  README.md
numerical-methods/gaussian-elimination/src/: lib.rs  main.rs
numerical-methods/lu/: Cargo.toml
numerical-methods/lu-factorization/: Cargo.toml  README.md
numerical-methods/lu-factorization/src/: column_vector.rs  lib.rs  main.rs  matrix.rs  number.rs  row_vector.rs  vector.rs
numerical-methods/lu-factorization/tests/: main.rs  matrix_4x4.rs  test_1000x1000_matrix.rs  test_4x4_matrix.rs
numerical-methods/lu/src/: main.rs
numerical-methods/system-of-equations/: Cargo.toml
numerical-methods/system-of-equations/src/: gaussian_elimination_with_backward_substitution.rs
numerical-methods/system-of-equations/tests/: test_4x4.rs
numerical-methods/system-of-linear-equations/: Cargo.toml  README.md
numerical-methods/system-of-linear-equations/benches/: system-of-linear-equations.rs
numerical-methods/system-of-linear-equations/src/: aliases.rs  gaussian_elimination_with_backward_substitution.rs  lib.rs  lu_factorization.rs
numerical-methods/system-of-linear-equations/tests/: main.rs  test_4x4.rs  utils.rs
numerical-methods/system-of-linear-equations/tests/it/: main.rs  test_gaussian_eliminatin_with_backward_substitution.rs  test_lu_factorization.rs  utils.rs
