[package]
name = "system-of-linear-equations"
version = "0.1.0"
edition.workspace = true

[dependencies]
nalgebra = "0.33"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
colored = "3.0"
paste = "1.0"
tabled = "0.18"
rand = "0.9"

[[bench]]
name = "system-of-linear-equations"
harness = false
